Stealing Css Style

--- a/index.html
+++ b/index.html
@@ -3,9 +3,47 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Experience The Grand Canyon!</title>
     <link rel="stylesheet" href="style.css">
     <script src="cc_7.js" defer></script>
+     <style>
+   
+  </style>
+</head>
+<body>
+  <div class="header">
+    <h2>Canyon Quest Tours</h2>
+  </div>
+  <input type="text" placeholder="Type something here">
+  <button>CLICK</button>
+  <div class="row">
+    <div class="button">Explore</div>
+    <div class="button">Gallery</div>
+    <div class="button">Book Now</div>
+  </div>
+
+
+<div class="sidenav">
+
+</div>
+
+<div class="main">
+  ...
+</div>
+    <nav class="Site-Nav" aria-label="primary">
+         <a href="#">About</a>
+         <a href="#">Services</a>
+         <a href="#">Clients</a>
+         <a href="#">Contact</a>
+         <a href="#">Blog</a>      
+         <a href="#">FAQ</a>
+         <a href="#">Book Now</a>
+    </nav>
+  </div>
+  
+  </div>
+</body>
+</html>
 </head>
 <body>
     
