--- a/index.html
+++ b/index.html
@@ -38,19 +38,11 @@
       </button>
     </div>
 
-  <section class="row">
-  <button class="button">
-    <img src="images/GrandCanyon Tour Image.jpg" alt="Tours">
-    <span>TOURS</span>
-  </button>
-  <button class="button">
-    <img src="images/Grand Canyon River Pic.jpg" alt="Activities">
-    <span>ACTIVITIES</span>
-  </button>
-  <button class="button">
-    <img src="images/Glamping in GRand Canyon.jpg" alt="Glamping">
-    <span>GLAMPING</span>
-  </button>
+
+<section class="row">
+  <button class="button"><img src="images/GrandCanyon Tour Image.jpg" alt=""><span>TOURS</span></button>
+  <button class="button"><img src="images/Grand Canyon River Pic.jpg" alt=""><span>ACTIVITIES</span></button>
+  <button class="button"><img src="images/Glamping in GRand Canyon.jpg" alt=""><span>GLAMPING</span></button>
 </section>
 
     <section class="section" style="margin-top:16px;">
