--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
   <header class="header">
     <h1>Canyon Quest Tours</h1>
     <nav class="Site-Nav" aria-label="primary">
-      <a href="#">About</a>
-      <a href="#">Services</a>
-      <a href="#">Clients</a>
-      <a href="#">Contact</a>
-      <a href="#">Blog</a>
-      <a href="#">FAQ</a>
-      <a href="#">Book Now</a>
+      <a href="#">| About |</a>
+      <a href="#">| Services |</a>
+      <a href="#">| Clients |</a>
+      <a href="#">| Contact |</a>
+      <a href="#">| Blog |</a>
+      <a href="#">| FAQ |</a>
+      <a href="#">| Book Now |</a>
     </nav>
   </header>
 
