Adding my headline Changer

--- a/index.html
+++ b/index.html
@@ -33,10 +33,12 @@
 
   <main class="container">
 
+    <h2 id="ctaHeadline" style="margin-bottom:8px;">Welcome</h2>
+
     <div class="messageBox" style="margin:16px 0;">
       <input id="messageInput" type="text" placeholder="Type something here" required />
       <button id="sendButton" aria-label="Send">
-        <span>Send</span>
+        <span>Update Headline</span>
       </button>
     </div>
 
@@ -56,7 +58,6 @@
     </section>
 
     <section class="section" style="margin-top:16px;">
-      <h2 style="margin-bottom:8px;">Welcome</h2>
       <p>Experience rim-to-river views, guided hikes, and photo stops—crafted just for you.</p>
     </section>
 
