Fix image source paths to use consistent casing

--- a/index.html
+++ b/index.html
@@ -44,15 +44,15 @@
 
     <section class="row">
       <button class="button">
-        <img src="images/GrandCanyon Tour Image.jpg" alt="Tours">
+        <img src="Images/GrandCanyon Tour Image.jpg" alt="Tours">
         <span>TOURS</span>
       </button>
       <button class="button">
-        <img src="images/Grand Canyon River Pic.jpg" alt="Activities">
+        <img src="Images/Grand Canyon River Pic.jpg" alt="Activities">
         <span>ACTIVITIES</span>
       </button>
       <button class="button">
-        <img src="images/Glamping in GRand Canyon.jpg" alt="Glamping">
+        <img src="Images/Glamping in GRand Canyon.jpg" alt="Glamping">
         <span>GLAMPING</span>
       </button>
     </section>
